--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.10.1",
+    "body-parser": "^1.14.1",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "express-handlebars": "^1.2.2",
     "express-session": "^1.11.3",
+    "fbjs": "^0.4.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.0",
     "grunt-cli": "^0.1.13",
@@ -19,7 +20,8 @@
     "passport": "^0.2.2",
     "passport-facebook": "^1.0.3",
     "react": "^0.13.3",
-    "react-tap-event-plugin": "^0.1.7",
+    "react-dom": "^0.14.0",
+    "react-tap-event-plugin": "^0.1.8",
     "reactify": "^1.1.1"
   },
   "devDependencies": {},
